1.3.3 - xxxxxxxxxxxxxxxx
========================
* Issue 250: Restore support for passing null to usingWatcher().

1.3.2 - February 6, 2013
========================
* MAJOR BUG FIX - Issue 232: ZooKeeper guarantees that "A watch object, or function/context pair, will only
be triggered once for a given notification." Curator was breaking this guarantee by internally creating a
new Watcher object each time one was needed. This is now fixed and ZooKeeper's guarantee is restored. Big
thanks to user barkbay for his persistence and help on this.

* Issue 247: POST_INITIALIZED_EVENT wasn't correctly handling an initially empty node.

* Issue 245: Auth info specified in the CuratorFrameworkFactory.Builder was not being re-set in cases
where the internal ZooKeeper handle was recreated. i.e. if the cluster has issues auth info would be lost.

* The default watcher in the ZooKeeper handle is now cleared before the ZooKeeper handle is closed. This avoids
an edge case where events meant for the old ZooKeeper handle get processed.

1.3.1 - January 28, 2013
========================
* Tightened up a possible race deep inside the connection management.

* PathChildrenCache.rebuild() and PathChildrenCache.rebuildNode() were not handling deleted nodes.

* Issue 237: New feature. PathChildrenCache now optionally posts an event when the initial cache is
populated. To accommodate this behavior there is a new version of start() that takes an enum. See the
Javadoc for each value. For this new behavior, use StartMode.POST_INITIALIZED_EVENT. Once the cache
is initialized a PathChildrenCacheEvent.Type.INITIALIZED will be posted. Huge thanks to user philflesh
for the idea and co-implementation.

1.3.0 - January 10, 2013
========================
* MAJOR CHANGE (thus a version bump): I'd always thought that if the client is disconnected from the server
long enough then an Expired event would be generated. Testing, however, shows this not to be the case. I believe