@@ -2,6 +2,8 @@
 ========================
 * Issue 250: Restore support for passing null to usingWatcher().
 
+* Issue 251: Allow a custom Executor Service to be used for PathChildrenCache.
+
 1.3.2 - February 6, 2013
 ========================
 * MAJOR BUG FIX - Issue 232: ZooKeeper guarantees that "A watch object, or function/context pair, will only
